# skills

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-26-cross-tool-skills-platform-design.md  2026-02-26-cross-tool-skills-platform-implementation.md  2026-02-27-personal-growth-coach-design.md  2026-02-27-personal-growth-coach-implementation.md  2026-02-27-runtime-execution-implementation.md
example-skill/: SKILL.md
scripts/: ng  predictor_adapter_template.py  run_trigger_eval.sh  skills-linker  trigger_eval_report.py  trigger_examples_tool.py  tui
skills/algorithm-kata-coach/: SKILL.md  skill.yaml
skills/api-design-review/: skill.yaml
skills/bug-investigation-coach/: SKILL.md  skill.yaml
skills/code-reading-accelerator/: skill.yaml
skills/debugging-kata-generator/: skill.yaml
skills/design-pattern-application-coach/: SKILL.md  skill.yaml
skills/engineering-coach/: skill.yaml
skills/example-skill/: SKILL.md  skill.yaml
skills/in-english/: SKILL.md  skill.yaml
skills/openclaw/: skill.yaml
skills/performance-thinking-coach/: SKILL.md  skill.yaml
skills/personal-growth-coach/: SKILL.md  skill.yaml
skills/power-web-search/: SKILL.md  skill.yaml
skills/pr-self-review/: SKILL.md  skill.yaml
skills/refactor-safely/: SKILL.md  skill.yaml
skills/skill-smith/: SKILL.md  inject.md  skill.yaml
skills/teaching-plan/: SKILL.md  skill.yaml
skills/test-case-designer/: SKILL.md  (+1 more)
tests/: __init__.py  runtime_plugins.py  test_adapters.py  test_cli.py  test_discovery.py  test_mcp_server.py  test_runtime_exec.py
trending/: SKILL.md
(+178 files in other folders)
