[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-platform"
version = "0.1.0"
description = "Cross-tool personal skills platform (CLI + adapters + MCP skeleton)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

